Import Update in Orbital_Visualization_App

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = [{name = "Baptiste LEBON, email = "Baptiste.LEBON@estaca.eu}]
 description = "Gives a 3D representation of a given orbit from TLE (Two Lines Elements) or directly from Keplerian paramaters."
 readme="README.md"
 dependencies=[
-    "python>3.8",
-    "numpy>1.23.0",
-    "matplotlib>3.5.0",
-    "skyfield>1.30.0",
+    "numpy",
+    "matplotlib",
+    "skyfield",
 ]
 
 [project.script]
 
+Orbital_Visualizator = "Orbital_Visualizator:Orbit_Visualizator"
+
 [tool.coverage.run]
+
+omit = ["*/script/*]
