Init added, setup added and settings updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
+    "python.testing.pytestEnabled": true,
+    "python.testing.pytestArgs": ["Tests"],
     "makefile.extensionOutputFolder": "./.vscode"
 }
