--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,16 @@
 [project]
 name = "Orbital_Visualizator"
 version = "0.01"
-authors = [{name = "Baptiste LEBON", email = "Baptiste.LEBON@estaca.eu"},]
-
+authors = [{name = "Baptiste LEBON", email = "Baptiste.LEBON@estaca.eu"}]
 description = "Gives a 3D representation of a given orbit from TLE (Two Lines Elements) or directly from Keplerian paramaters."
 readme="README.md"
 dependencies=[
     "numpy",
     "matplotlib",
     "skyfield",
+    "importlib-metadata ; python_version<='3.10'",
 ]
 
-[project.script]
-
-Orbital_Visualizator = "Orbital_Visualizator:Orbit_Visualizator"
-
-[tool.coverage.run]
-
-omit = ["*/script/*"]
-
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
