--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ matplotlib
 numpy
 setuptools
 pytest
-wheel
-ai-core-sdk[aicore-content]
-Cython<3
-sphinx
-sphinx-autobuild
-sphinx-rtd-theme
+#wheel
+#ai-core-sdk[aicore-content]
+#Cython<3
+#sphinx
+#sphinx-autobuild
+#sphinx-rtd-theme
+coverage
