--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.testing.pytestEnabled": true,
-    "python.testing.pytestArgs": ["Orbital_Visualizator/tests"],
+    "python.testing.pytestArgs": ["tests"],
     "makefile.extensionOutputFolder": "./.vscode"
 }
