--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ skyfield
 matplotlib
 numpy
 setuptools
-pytest
 #wheel
 #ai-core-sdk[aicore-content]
 #Cython<3
 sphinx
 sphinx-autobuild
 sphinx-rtd-theme
-coverage
+recommonmark
+sphinx-markdown-builder
